# affogato

./: .gitignore  README.md  pyproject.toml  requirements.manual.txt
demo/16341/campos_512_v4/00000/: 00000.json  00000_nd.exr
demo/16341/campos_512_v4/00001/: 00001.json  00001_nd.exr
demo/16341/campos_512_v4/00002/: 00002.json  00002_nd.exr
demo/16341/campos_512_v4/00003/: 00003.json  00003_nd.exr
demo/16341/campos_512_v4/00004/: 00004.json  00004_nd.exr
demo/16341/campos_512_v4/00005/: 00005.json  00005_nd.exr
demo/16341/campos_512_v4/00006/: 00006.json  00006_nd.exr
demo/16341/campos_512_v4/00007/: 00007.json  00007_nd.exr
demo/16341/campos_512_v4/00008/: 00008.json  00008_nd.exr
demo/16341/campos_512_v4/00009/: 00009.json  00009_nd.exr
demo/16341/campos_512_v4/00010/: 00010.json  00010_nd.exr
demo/16341/campos_512_v4/00011/: 00011.json  00011_nd.exr
demo/16341/campos_512_v4/00012/: 00012.json  00012_nd.exr
demo/16341/campos_512_v4/00013/: 00013.json  00013_nd.exr
demo/16341/campos_512_v4/00014/: 00014.json  00014_nd.exr
demo/16341/campos_512_v4/00015/: 00015.json  (+1 more)
docker/: Dockerfile_gemma3  Dockerfile_molmo  docker_build.sh  docker_run.sh
notebook/: visualize_dataset.py
src/: job_manager.py  run_stage1.py  run_stage2.py  run_stage3.py  run_stage4.py
src/dataset/: collate.py
src/dataset/objaverse/: dataset.py  download.py  upload.py  utils.py
src/model/: mobilesam.py
src/model/prompt/: gemma3.yaml  gemma3_v2.yaml
src/model/vllm/: gemma3.py  molmo.py
src/utils/: geometry.py  io.py  logging.py  misc.py  timer.py  vis.py
(+48 files in other folders)
